--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             <meta property="og:url" content="https://lelshop.com/">
         <link rel="canonical" href="https://lelshop.com/">
             <link rel="icon" type="Image/png" href="Image/Logolel.png">
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css">
+        <link rel="stylesheet" href="style.css">
         <style>
             .slick-slider {
                 margin-bottom: 30px;
