--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <meta property="og:site_name" content ="LEL SHOP">
             <meta property="og:url" content="https://lelshop.com/">
         <link rel="canonical" href="https://lelshop.com/">
-            <link rel="icon" type="Image/png" href="Image/Logolel.png">
+                <link rel="icon" type="Image/png" href="Image/Logolel.png">
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" crossorigin="anonymous">
             <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css">
-        <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="Css/style.css">
         <style>
             .slick-slider {
                 margin-bottom: 30px;
@@ -88,7 +90,38 @@
         </style>
     </head>
     <body id="page_homepage" class="front_page">
-        
+        <div class = "ec-layoutRole">
+            <div class="ec-layoutRole__Header">
+                <div class="ec-headerNaviRole">
+                    <div class="ec-headerNaviRole__left">
+                        <div class="ec-headerNaviRole__search">
+
+        <div class="ec-headerSearch">
+            <div class="ec-headerSearch__category">
+                <div class="ec-select fi-select_search">
+                    <select name="category_id" class="category_id">
+                        <option value="">Tất cả sản phầm</option>
+                        <option value="1">Blue Archive</option>
+                        <option value="2"></option>
+                        <option value="3"></option>
+                        <option value="4"></option>
+                        <option value="5"></option>
+        </div>
+        <div class="ec-headerSearch__keyword">
+            <div class="ec-input">
+                <input type="search" name="name" maxlength="40" class="search-name" placeholder="Danh mục" />
+                <button class="ec-headerSearch__keyword" type="submit">
+                    <div class="ec-icon">
+                        <img src="icon/search-dark.svg" alt="">
+                    </div>
+                </button>
+            </div>
+        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
 
