--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
         </style>
     </head>
     <body id="page_homepage" class="front_page">
-        <div class = "ec-layoutRole">
-            <div class="ec-layoutRole__Header">
-                <div class="ec-headerNaviRole">
-                    <div class="ec-headerNaviRole__left">
-                        <div class="ec-headerNaviRole__search">
+        <div class = "fi-layoutRole">
+            <div class="fi-layoutRole__Header">
+                <div class="fi-headerNaviRole">
+                    <div class="fi-headerNaviRole__left">
+                        <div class="fi-headerNaviRole__search">
 
-        <div class="ec-headerSearch">
-            <div class="ec-headerSearch__category">
-                <div class="ec-select fi-select_search">
+        <div class="fi-headerSearch">
+            <div class="fi-headerSearch__category">
+                <div class="fi-select fi-select_search">
                     <select name="category_id" class="category_id">
                         <option value="">Tất cả sản phầm</option>
                         <option value="1">Blue Archive</option>
@@ -107,17 +107,87 @@
                         <option value="4"></option>
                         <option value="5"></option>
         </div>
-        <div class="ec-headerSearch__keyword">
-            <div class="ec-input">
+        <div class="fi-headerSearch__keyword">
+            <div class="fi-input">
                 <input type="search" name="name" maxlength="40" class="search-name" placeholder="Danh mục" />
-                <button class="ec-headerSearch__keyword" type="submit">
-                    <div class="ec-icon">
+                <button class="fi-headerSearch__keyword" type="submit">
+                    <div class="fi-icon">
                         <img src="icon/search-dark.svg" alt="">
                     </div>
                 </button>
             </div>
         </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="fi-headerRole__navSP">
+                <div class="fi-headerNavSp">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </div>
+        </div>
+        <div class="fi-headerNaviRole__right">
+            <div class="fi-headerNaviRole__nav">
+                <div class="fi-headerNav">
+                    <div class="fi-headerNav__item">
+                        <a>
+                            <i class="fi-headerNav__itemIcon fas fa fa-user fa-fw"></i>
+                            <span class="fi-headerNav__itemLink">Đăng ký thành viên</span>
+                        </a>
+                    </div>
+                    <div class="fi-headerNav__item">
+                        <a>
+                            <i class="fi-headerNav__itemIcon fas fa-heart fa-fw"></i>
+                            <span class="fi-headerNav__itemLink">Yêu thích</span>
+                        </a>
+                    </div>
+                    <div class="fi-headerNav__item">
+                        <a>
+                            <i class="fi-headerNav__itemIcon fas fa-lock fa-fw"></i>
+                            <span class="fi-headerNav__itemLink">Đăng nhập</span>
+                        </a>
+                    </div>
+                    <div class="fi-headerNav__item">
+                        <a>
+                            <i class="fi-headerNav__itemIcon fas fa-question-circle fa-fw"></i>
+                            <span class="fi-headerNav__itemLink">Hỗ trợ</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="fi-headerRole__cart">
+                    <div class="fi-cartNaviWarp">
+                        <div class="fi-cartNavi">
+                            <i class="fi-cartNavi__icon fas fa-shopping-cart">
+                                <span class="fi-cartNavi__badge">0</span>
+                            </i>
+                            <div class="fi-cartNavi_label">
+                                <div class="ec-cartNavi__price">0đ</div>
+                            </div>
+                        </div>
+                        <div class="fi-cartNaviNull">
+                            <div class="fi-cartNaviNull__mess">
+                                <p>Không có sản phẩm trong giỏ của bạn</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <style>
+            @media screen and (max-width:500px) {
+                .fi-headerTitle__title img {width:200px;}
+            }
+        </style>
+        <div class="fi-headerRole">
+            <div class="fi-headerRold__title">
+                <div class="fi-headerTitle">
+                    <div class="fi-headerTitle__title">
+                        <h1>
+                            <a href="https://lelshop.com/">
+                                <img src="Image/Panel.png">
+                            </a>
+                        </h1>
                     </div>
                 </div>
             </div>
