login and faq add, refine

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head prefix = "og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# product: http://ogp.me/ns/product#">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<title>Lel Shop / Đâng ký</title>
+	<title>Lel Shop / Đâng nhập</title>
 	<meta property="og:type" content="article">
 	<meta property="og:site_name" content="Lel Shop">
 	<link rel="icon" type="Image/png" href="Image/Logolel.png">
@@ -12,6 +12,6 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css">
     <link rel="stylesheet" href="Css/style.css">
 </head>
-<body id="page_registry" class="signup_page">
+<body id="page_mypage_login" class="mypage">
 </body>
 </html>
