--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<title>Lel Shop</title>
 		<meta property="og:type" content="website">
 		<meta property="og:site_name" content ="LEL SHOP">
-		<meta property="og:url" content="https://lelshop.com/">
-		<link rel="canonical" href="https://lelshop.com/">
+	<!--<meta property="og:url" content="https://lelshop.com/">
+		<link rel="canonical" href="https://lelshop.com/">  -->
 		<link rel="icon" type="Image/png" href="Image/Logolel.png">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" crossorigin="anonymous">
 		<link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css">
 		<link rel="stylesheet" href="Css/style.css">
-		<style>
+		<style> 
 			.slick-slider {
 				margin-bottom: 30px;
 			}
@@ -136,25 +136,19 @@
 						<div class="fi-headerNaviRole__nav">
 							<div class="fi-headerNav">
 								<div class="fi-headerNav__item">
-									<a href="https://lelshop.com/signup">
+									<a href="/signup.html">
 										<i class="fi-headerNav__itemIcon fas fa fa-user fa-fw"></i>
 										<span class="fi-headerNav__itemLink">Đăng ký thành viên</span>
 									</a>
 								</div>
 								<div class="fi-headerNav__item">
-									<a href="https://lelshop.com/user/favorite">
-										<i class="fi-headerNav__itemIcon fas fa-heart fa-fw"></i>
-										<span class="fi-headerNav__itemLink">Yêu thích</span>
-									</a>
-								</div>
-								<div class="fi-headerNav__item">
-									<a href="https://lelshop.com/login">
+									<a href="/login.html">
 										<i class="fi-headerNav__itemIcon fas fa-lock fa-fw"></i>
 										<span class="fi-headerNav__itemLink">Đăng nhập</span>
 									</a>
 								</div>
 								<div class="fi-headerNav__item">
-									<a href="https://lelshop.com/faq">
+									<a href="/faq.html">
 										<i class="fi-headerNav__itemIcon fas fa-question-circle fa-fw"></i>
 										<span class="fi-headerNav__itemLink">Hỗ trợ</span>
 									</a>
@@ -193,14 +187,28 @@
 				<div class="fi-headerTitle">
 					<div class="fi-headerTitle__title">
 						<h1>
-							<a href="https://lelshop.com/">
+							<a href="/index.html">
 								<img src="Image/Panel.png">
-							</a>
+							</a>    
 						</h1>
 					</div>
 				</div>
 			</div>
 		</div>
+        <div class="fi-layoutRole__contents">
+            <div class="fi-layoutRole__main">
+                <div class="fi-sliderRole">
+                    <div class="main_visual"> <!--slick slide sản phẩm-->
+                        <a></a>
+                        <a></a>
+                        <a></a>
+                        <a></a>
+                        <a></a>
+                    </div>
+                </div>
+            </div>
+            <div class="fi-layoutRole__mainBottom"
+        </div>
 	</body>
 </html>
 
