--- a/signup.html
+++ b/signup.html
@@ -27,10 +27,10 @@
 										<select name="category_id" class="category_id">
 											<option value="">Tất cả sản phầm</option>
 											<option value="1">Blue Archive</option>
-											<option value="2"></option>
-											<option value="3"></option>
-											<option value="4"></option>
-											<option value="5"></option>
+											<option value="2">.</option>
+											<option value="3">.</option>
+											<option value="4">.</option>
+											<option value="5">.</option>
 									</div>
 								</div>
 								<div class="fi-headerSearch__keyword">
@@ -98,11 +98,6 @@
 				</div>
 				<!--End of Right Header-->
 			</div>
-			<style>
-				@media screen and (max-width:600px) {
-					.fi-headerTitle__title img {width:200px;}
-				}
-			</style>
 			<div class="fi-headerRole">
 				<div class="fi-headerRole__title">
 					<div class="fi-headerTitle">
