--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	</head>
 	<body id="page_homepage" class="front_page">
 		<div class = "fi-layoutRole">
-			<div class="fi-layoutRole__header">
+			<div class="fi-headerRole">
 				<div class="fi-headerNaviRole">
 					<!--Left Header-->
 					<div class="fi-headerNaviRole__left">
@@ -205,7 +205,7 @@
 		</div>
 		<style>
 			@font-face {
-		  		font-family: 'caveat';
+		  		font-family: "caveat";
 		  		src: url(font/Caveat-Regular.ttf);
 			}
 		
@@ -214,9 +214,8 @@
 			}
 			.main-contents {
 		 		background: #ffffff;
-		  		font-family: "Noto Sans";
 				src: url(font/NotoSans-Regular.ttf);
-		  		font-size: 100%;
+		  		font-size: 200%;
 		  		color: black;
 		  		line-height: 1.6;
 		  		height: 100%;
