--- a/faq.html
+++ b/faq.html
@@ -13,5 +13,104 @@
     <link rel="stylesheet" href="Css/style.css">
 </head>
 <body id="page_faq" class="other_page">
+	div class = "fi-layoutRole">
+	<div class="fi-headerRole">
+		<div class="fi-headerNaviRole">
+			<!--Left Header-->
+			<div class="fi-headerNaviRole__left">
+				<!--Search Bar-->
+				<div class="fi-headerNaviRole__search">
+					<div class="fi-headerSearch">
+						<form>
+							<div class="fi-headerSearch__category">
+								<div class="fi-select fi-select_search">
+									<select name="category_id" class="category_id">
+										<option value="">Tất cả sản phầm</option>
+										<option value="1">Blue Archive</option>
+										<option value="2">.</option>
+										<option value="3">.</option>
+										<option value="4">.</option>
+										<option value="5">.</option>
+								</div>
+							</div>
+							<div class="fi-headerSearch__keyword">
+								<div class="fi-input">
+										<input type="search" name="name" maxlength="50" class="search-name" placeholder="Tìm kiếm">
+										<button class="fi-headerSearch__keywordBtn" type="submit">
+											<div class="fi-icon">
+												<img src="icon/search-dark.svg" alt="">
+											</div>
+										</button>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+				<!--End of Search Bar-->
+				<div class="fi-headerRole__navSP">
+					<div class="fi-headerNavSp">
+						<i class="fas fa-bars"></i>
+					</div>
+				</div>
+			</div>
+			<!--End of Left Header-->
+			<!--Right Header-->
+			<div class="fi-headerNaviRole__right">
+				<div class="fi-headerNaviRole__nav">
+					<div class="fi-headerNav">
+						<div class="fi-headerNav__item">
+							<a href="/signup.html">
+								<i class="fi-headerNav__itemIcon fas fa fa-user fa-fw"></i>
+								<span class="fi-headerNav__itemLink">Đăng ký thành viên</span>
+							</a>
+						</div>
+						<div class="fi-headerNav__item">
+							<a href="/login.html">
+								<i class="fi-headerNav__itemIcon fas fa-lock fa-fw"></i>
+								<span class="fi-headerNav__itemLink">Đăng nhập</span>
+							</a>
+						</div>
+						<div class="fi-headerNav__item">
+							<a href="/faq.html">
+								<i class="fi-headerNav__itemIcon fas fa-question-circle fa-fw"></i>
+								<span class="fi-headerNav__itemLink">Hỗ trợ</span>
+							</a>
+						</div>
+					</div>
+					<div class="fi-headerRole__cart">
+						<div class="fi-cartNaviWrap">
+							<div class="fi-cartNavi">
+								<i class="fi-cartNavi__icon fas fa-shopping-cart">
+									<span class="fi-cartNavi__badge">0</span>
+								</i>
+								<div class="fi-cartNavi_label">
+									<div class="fi-cartNavi__price">0đ</div>
+								</div>
+							</div>
+							<div class="fi-cartNaviNull">
+								<div class="fi-cartNaviNull__mess">
+									<p>Không có sản phẩm trong giỏ của bạn</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--End of Right Header-->
+		</div>
+		<div class="fi-headerRole">
+			<div class="fi-headerRole__title">
+				<div class="fi-headerTitle">
+					<div class="fi-headerTitle__title">
+						<h1>
+							<a href="/index.html">
+								<img src="Image/Panel.png">
+							</a>    
+						</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
