--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
 </head>
 <body id="page_signup" class="signup_page">
 	<div class = "fi-layoutRole">
-		<div class="fi-layoutRole__Header">
+		<div class="fi-headerRole">
 			<div class="fi-headerNaviRole">
 				<!--Left Header-->
 				<div class="fi-headerNaviRole__left">
@@ -35,8 +35,8 @@
 								</div>
 								<div class="fi-headerSearch__keyword">
 									<div class="fi-input">
-											<input type="search" name="name" maxlength="40" class="search-name" placeholder="Tìm kiếm" />
-											<button class="fi-headerSearch__keyword" type="submit">
+											<input type="search" name="name" maxlength="50" class="search-name" placeholder="Tìm kiếm" />
+											<button class="fi-headerSearch__keywordBtn" type="submit">
 												<div class="fi-icon">
 													<img src="icon/search-dark.svg" alt="">
 												</div>
@@ -177,15 +177,6 @@
 													</font>
 												</span>
 												<input type="tel" id="entry_postal_code" name="entry[postal_code]" required placeholder="000000"></input>
-												<div class="fi-zipInput_help">
-													<a href="https://rentapartment.vn/vietnam-zip-postal-code/" target="_blank">
-														<span>
-															<font style="vertical-align: inherit;">
-																<font style="vertical-align: inherit;">Tìm kiếm mã bưu điện</font>
-															</font>
-														</span>
-													</a>
-												</div>
 											</div>
 											<div class="fi-select">
 												<select id="entry-address-pref" name="entry[address][pref]" required>
