--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	</div>
 	<div class="ec-headerSearch__keyword">
 		<div class="ec-input">
-			<input type="search" name="name" maxlength="50" class="search-name" placeholder="キーワードを入力" />
+			<input type="search" name="name" maxlength="50" class="search-name" placeholder="Tìm kiếm" />
 			<button class="ec-headerSearch__keywordBtn" type="submit">
 				<div class="ec-icon">
 					<img src="/icon/search-dark.svg" alt="">
@@ -180,27 +180,27 @@
 		
 <div class="ec-headerNav">
 		<div class="ec-headerNav__item">
-		<a href="/login.html">
+		<a href="/signup.html">
 			<i class="ec-headerNav__itemIcon fas fa-user fa-fw"></i>
-			<span class="ec-headerNav__itemLink">新規会員登録</span>
+			<span class="ec-headerNav__itemLink">Đăng ký</span>
 		</a>
 	</div>
 				<div class="ec-headerNav__item">
-			<a href="https://shop.yostar.co.jp/mypage/favorite">
+			<a href="/live.html">
 				<i class="ec-headerNav__itemIcon fas fa-wifi fa-fw"></i>
 				<span class="ec-headerNav__itemLink">Live stream</span>
 			</a>
 		</div>
 			<div class="ec-headerNav__item">
-		<a href="https://shop.yostar.co.jp/mypage/login">
+		<a href="/login.html">
 			<i class="ec-headerNav__itemIcon fas fa-lock fa-fw"></i>
-			<span class="ec-headerNav__itemLink">ログイン</span>
+			<span class="ec-headerNav__itemLink">Đăng nhập</span>
 		</a>
 	</div>
 	<div class="ec-headerNav__item">
-	<a href="https://shop.yostar.co.jp/faq">
+	<a href="/faq.html">
 		<i class="ec-headerNav__itemIcon fas fa-question-circle fa-fw"></i>
-		<span class="ec-headerNav__itemLink">よくある質問</span>
+		<span class="ec-headerNav__itemLink">Hỗ trợ</span>
 	</a>
 </div>
 </div>
@@ -218,7 +218,7 @@
 </div>
 		<div class="ec-cartNaviNull">
 		<div class="ec-cartNaviNull__message">
-			<p>現在カート内に商品はございません。</p>
+			<p>Không có sản phẩm nào trong giỏ hàng của bạn</p>
 		</div>
 	</div>
 </div>
@@ -240,8 +240,8 @@
 	<div class="ec-headerTitle">
 		<div class="ec-headerTitle__title">
 			<h1>
-				<a href="https://shop.yostar.co.jp/">
-											<img src="/html/user_data/assets/img/logo/2112_logo.png">
+				<a href="/index.html">
+											<img src="/Image/Panel.png">
 				</a>
 			</h1>
 		</div>
@@ -662,7 +662,7 @@
 <style>
 @font-face {
 font-family: 'caveat';
-src: url(font/caveat.ttf);
+src: url(font/Caveat-Regular.ttf);
 }
 
 ul {
@@ -670,7 +670,7 @@ list-style: none;
 }
 .main-contents38 {
 background: #ffffff;
-font-family: "Noto Sans Japanese";
+font-family: "Noto Sans";
 font-size: 100%;
 color: black;
 line-height: 1.6;
@@ -746,7 +746,7 @@ opacity: 0.7;
 		<div class="ec-secHeading">
 			<span class="ec-secHeading__en">CATEGORY</span>
 			<span class="ec-secHeading__line"></span>
-			<span class="ec-secHeading__ja">カテゴリ</span>
+			<span class="ec-secHeading__ja">Phân loại</span>
 		</div>
 		<div class="show-content">
 			<ul>
@@ -840,7 +840,7 @@ opacity: 0.7;
 		<div class="ec-secHeading">
 			<span class="ec-secHeading__en">RECOMMEND</span>
 			<span class="ec-secHeading__line"></span>
-			<span class="ec-secHeading__ja">おすすめ商品</span>
+			<span class="ec-secHeading__ja">Gợi ý</span>
 		</div>
 				</div>
 	<div class="ec-shelfRole">
@@ -897,18 +897,15 @@ opacity: 0.7;
 	</div>
 </div>
 </div>
-<!-- ▲item_list▲ -->
-	<!-- ▲おすすめ商品 -->
-<!-- ▼特集トピックス -->
 		<style>
 @font-face {
 font-family: 'caveat';
-src: url(font/caveat.ttf);
+src: url(font/Caveat-Regular.ttf);
 }
 
 .main-contents39 {
 background: #ffffff;
-font-family: "Noto Sans Japanese";
+font-family: "Noto Sans";
 font-size: 100%;
 line-height: 1.6;
 color: #716969;
@@ -1136,8 +1133,6 @@ opacity: 0.7;
 		</div>
 	</div>
 </div>
-	<!-- ▲特集トピックス -->
-<!-- ▼新着情報 -->
 		
 <script>
 	$(function() {
@@ -1173,89 +1168,7 @@ opacity: 0.7;
 		});
 	});
 </script>
-<div class="ec-role" id="news">
-<div class="ec-newsRole">
-	<div class="ec-secHeading">
-		<span class="ec-secHeading__en">NEWS</span>
-		<span class="ec-secHeading__line"></span>
-		<span class="ec-secHeading__ja">
-							お知らせ
-		</span>
-	</div>
-	<br>
-																																																												</div>
-<div style="font-size: 14px;">
-	
-<script src="/plugin/tabacms/assets/script.js"></script>
-<link rel="stylesheet" href="/plugin/tabacms/assets/style.css">
 
-<div class="row">
-<div class="col-xs-12">
-	<ul class="tabacms_post_list">
-						<li class="row">
-				<div class="col-md-3">
-						<time>2024/11/15</time>
-														<label class="text-nowrap tabacms_category_news_notice" style="border:solid 1px #ff0000;background-color:#ffffff;color:#ff0000;">重要なお知らせ</label>
-											</div>
-				<div class="col-md-9">
-												<a href="/news/news_20241115"><strong>物流量の増加によるお届け遅延のお知らせとお詫び</strong></a>
-										</div>
-			</li>
-						<li class="row">
-				<div class="col-md-3">
-						<time>2024/11/13</time>
-														<label class="text-nowrap tabacms_category_news_system" style="border:solid 1px #cccccc;background-color:#ffffff;color:#cccccc;">システムメンテナンス</label>
-											</div>
-				<div class="col-md-9">
-												<a href="/news/news_20241113"><strong>システムメンテナンスに伴うサイト一時休止のお知らせ</strong></a>
-										</div>
-			</li>
-						<li class="row">
-				<div class="col-md-3">
-						<time>2024/10/30</time>
-														<label class="text-nowrap tabacms_category_news_info" style="border:solid 1px #5cb1b1;background-color:#ffffff;color:#5cb1b1;">お知らせ</label>
-											</div>
-				<div class="col-md-9">
-												<a href="/news/news_20241030"><strong>自然災害による配送への影響について</strong></a>
-										</div>
-			</li>
-						<li class="row">
-				<div class="col-md-3">
-						<time>2024/10/15</time>
-														<label class="text-nowrap tabacms_category_news_notice" style="border:solid 1px #ff0000;background-color:#ffffff;color:#ff0000;">重要なお知らせ</label>
-											</div>
-				<div class="col-md-9">
-												<a href="/news/news_20241015"><strong>【重要】利用規約・特定商取引法　改訂のお知らせ</strong></a>
-										</div>
-			</li>
-						<li class="row">
-				<div class="col-md-3">
-						<time>2024/09/17</time>
-														<label class="text-nowrap tabacms_category_news_notice" style="border:solid 1px #ff0000;background-color:#ffffff;color:#ff0000;">重要なお知らせ</label>
-											</div>
-				<div class="col-md-9">
-												<a href="/news/news_20240917"><strong>【重要】利用規約・プライバシーポリシー・特定商取引法　改訂のお知らせ</strong></a>
-										</div>
-			</li>
-				</ul>
-</div>
-<div class="col-xs-12">
-	<a href="/news" class="pull-right">＞ 新着情報一覧</a>
-</div>
-</div>
-
-</div>
-</div>
-
-
-	<!-- ▲新着情報 -->
-
-			</div>
-				</div>
-
-				</div>
-
-	
 			<div class="ec-layoutRole__footer">
 			<!-- ▼フッター -->
 		<div class="ec-footerRole">
@@ -1285,7 +1198,7 @@ opacity: 0.7;
 	</ul>
 	<div class="ec-footerTitle">
 		<div class="ec-footerTitle__logo">
-			<a href="https://shop.yostar.co.jp/">
+			<a href="/index.html">
 								<img src="/html/user_data/assets/img/logo/2112_logo-WT.png" style="width:300px">
 				</a>
 		</div>
@@ -1754,5 +1667,3 @@ var eccube_lang = {
 </script>
 </body>
 </html>
-
-	</body>
